@@ -56,31 +56,32 @@ public class Parser {
   public Parser(Logger logger) {
     this.logger = logger;
 
-    this.precedenceLadder = new FExpressionParser[] {
-      this::parseAssignmentExpression,
-      this::parseNullCoalesceExpression,
-      this::parseConcatenationExpression,
-      this::parseDisjunctionExpression,
-      this::parseConjunctionExpression,
-      this::parseEqualityExpression,
-      this::parseComparisonExpression,
-      this::parseAdditiveExpression,
-      this::parseMultiplicativeExpression,
-      this::parseExponentiationExpression,
-      this::parseNegationExpression,
-      this::parseFlipSignExpression,
-      this::parseIndexExpression,
-      this::parseMemberAccessExpression,
-      this::parseFunctionInvocationExpression,
-      this::parseIfThenElseExpression,
-      this::parseCallbackExpression,
-      this::parseParenthesisExpression,
-      (tk, s) -> this.parsePrimaryExpression(tk),
+    this.precedenceLadder = new FExpressionParser[]{
+            this::parseAssignmentExpression,
+            this::parseNullCoalesceExpression,
+            this::parseConcatenationExpression,
+            this::parseDisjunctionExpression,
+            this::parseConjunctionExpression,
+            this::parseEqualityExpression,
+            this::parseComparisonExpression,
+            this::parseAdditiveExpression,
+            this::parseMultiplicativeExpression,
+            this::parseExponentiationExpression,
+            this::parseNegationExpression,
+            this::parseFlipSignExpression,
+            this::parseIndexExpression,
+            this::parseMemberAccessExpression,
+            this::parseFunctionInvocationExpression,
+            this::parseIfThenElseExpression,
+            this::parseCallbackExpression,
+            this::parseParenthesisExpression,
+            (tk, s) -> this.parsePrimaryExpression(tk),
     };
   }
 
   /**
    * Parses all available tokens into an abstract syntax tree (AST)
+   *
    * @return AST root ready for execution
    */
   public ProgramExpression parse(ITokenizer tokenizer) throws AEvaluatorError {
@@ -92,12 +93,12 @@ public class Parser {
     }
 
     // Completely empty expression, should've at least parsed one line
-    if (lines.size() == 0)
+    if (lines.isEmpty())
       throw new UnexpectedTokenError(tokenizer, null, TokenType.valuesInTrialOrder);
 
     return new ProgramExpression(
-      lines, lines.get(0).getHead(), lines.get(lines.size() - 1).getTail(),
-      tokenizer.getRawText()
+            lines, lines.getFirst().getHead(), lines.getLast().getTail(),
+            tokenizer.getRawText()
     );
   }
 
@@ -173,7 +174,7 @@ public class Parser {
     while ((tk = tokenizer.peekToken()) != null && tk.getType() != TokenType.PARENTHESIS_CLOSE) {
       logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Parsing argument " + signature.size());
 
-      if (signature.size() > 0) {
+      if (!signature.isEmpty()) {
         // Arguments other than the first one need to be separated out by a comma
         // If there's no comma, this cannot be a callback expression and is more likely a parenthesis expression
         if (tk.getType() != TokenType.COMMA) {
@@ -265,7 +266,7 @@ public class Parser {
     while ((tk = tokenizer.peekToken()) != null && tk.getType() != TokenType.PARENTHESIS_CLOSE) {
       logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Parsing argument " + arguments.size());
 
-      if (arguments.size() > 0) {
+      if (!arguments.isEmpty()) {
         // Arguments other than the first one need to be separated out by a comma
         if (tk.getType() != TokenType.COMMA)
           throw new UnexpectedTokenError(tokenizer, tk, TokenType.COMMA);
@@ -302,8 +303,8 @@ public class Parser {
       }
 
       arguments.add(new Tuple<>(
-        invokeLowestPrecedenceParser(tokenizer),
-        identifier == null ? null : new IdentifierExpression(identifier.getValue(), identifier, identifier, tokenizer.getRawText())
+              invokeLowestPrecedenceParser(tokenizer),
+              identifier == null ? null : new IdentifierExpression(identifier.getValue(), identifier, identifier, tokenizer.getRawText())
       ));
     }
 
@@ -313,12 +314,12 @@ public class Parser {
       throw new UnexpectedTokenError(tokenizer, tk, TokenType.PARENTHESIS_CLOSE);
 
     IdentifierExpression identifierExpression = new IdentifierExpression(
-      tokenIdentifier.getValue(), tokenIdentifier, tokenIdentifier, tokenizer.getRawText()
+            tokenIdentifier.getValue(), tokenIdentifier, tokenIdentifier, tokenizer.getRawText()
     );
 
     return new FunctionInvocationExpression(
-      identifierExpression, arguments, paren.getType() == TokenType.OPTIONAL_PARENTHESIS_OPEN,
-      tokenIdentifier, tk, tokenizer.getRawText()
+            identifierExpression, arguments, paren.getType() == TokenType.OPTIONAL_PARENTHESIS_OPEN,
+            tokenIdentifier, tk, tokenizer.getRawText()
     );
   }
 
@@ -326,25 +327,25 @@ public class Parser {
 
   private AExpression parseNegationExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseUnaryExpression(
-      (input, h, t, op) -> new InvertExpression(input, h, t, tokenizer.getRawText()),
-      tokenizer, precedenceSelf, false,
-      new TokenType[] { TokenType.BOOL_NOT }, null
+            (input, h, t, op) -> new InvertExpression(input, h, t, tokenizer.getRawText()),
+            tokenizer, precedenceSelf, false,
+            new TokenType[]{TokenType.BOOL_NOT}, null
     );
   }
 
   private AExpression parseParenthesisExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseUnaryExpression(
-      (input, h, t, op) -> input,
-      tokenizer, precedenceSelf, true,
-      new TokenType[] { TokenType.PARENTHESIS_OPEN }, new TokenType[] { TokenType.PARENTHESIS_CLOSE }
+            (input, h, t, op) -> input,
+            tokenizer, precedenceSelf, true,
+            new TokenType[]{TokenType.PARENTHESIS_OPEN}, new TokenType[]{TokenType.PARENTHESIS_CLOSE}
     );
   }
 
   private AExpression parseFlipSignExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseUnaryExpression(
-      (input, h, t, op) -> new FlipSignExpression(input, h, t, tokenizer.getRawText()),
-      tokenizer, precedenceSelf, false,
-      new TokenType[] { TokenType.MINUS }, null
+            (input, h, t, op) -> new FlipSignExpression(input, h, t, tokenizer.getRawText()),
+            tokenizer, precedenceSelf, false,
+            new TokenType[]{TokenType.MINUS}, null
     );
   }
 
@@ -352,51 +353,37 @@ public class Parser {
 
   private AExpression parseMemberAccessExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new MemberAccessExpression(lhs, rhs, op.getType() == TokenType.OPTIONAL_DOT, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.DOT, TokenType.OPTIONAL_DOT }, null
+            (lhs, rhs, h, t, op) -> new MemberAccessExpression(lhs, rhs, op.getType() == TokenType.OPTIONAL_DOT, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.DOT, TokenType.OPTIONAL_DOT}, null
     );
   }
 
   private AExpression parseIndexExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new IndexExpression(lhs, rhs, op.getType() == TokenType.OPTIONAL_BRACKET_OPEN, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.RESET, precedenceSelf,
-      new TokenType[] { TokenType.BRACKET_OPEN, TokenType.OPTIONAL_BRACKET_OPEN },
-      new TokenType[] { TokenType.BRACKET_CLOSE, TokenType.BRACKET_CLOSE }
+            (lhs, rhs, h, t, op) -> new IndexExpression(lhs, rhs, op.getType() == TokenType.OPTIONAL_BRACKET_OPEN, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.RESET, precedenceSelf,
+            new TokenType[]{TokenType.BRACKET_OPEN, TokenType.OPTIONAL_BRACKET_OPEN},
+            new TokenType[]{TokenType.BRACKET_CLOSE, TokenType.BRACKET_CLOSE}
     );
   }
 
   private AExpression parseComparisonExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> {
+            (lhs, rhs, h, t, op) -> {
 
-        ComparisonOperation operator;
-        switch (op.getType()) {
-          case GREATER_THAN:
-            operator = ComparisonOperation.GREATER_THAN;
-            break;
+              ComparisonOperation operator = switch (op.getType()) {
+                case GREATER_THAN -> ComparisonOperation.GREATER_THAN;
+                case GREATER_THAN_OR_EQUAL -> ComparisonOperation.GREATER_THAN_OR_EQUAL;
+                case LESS_THAN -> ComparisonOperation.LESS_THAN;
+                case LESS_THAN_OR_EQUAL -> ComparisonOperation.LESS_THAN_OR_EQUAL;
+                default -> throw new IllegalStateException();
+              };
 
-          case GREATER_THAN_OR_EQUAL:
-            operator = ComparisonOperation.GREATER_THAN_OR_EQUAL;
-            break;
-
-          case LESS_THAN:
-            operator = ComparisonOperation.LESS_THAN;
-            break;
-
-          case LESS_THAN_OR_EQUAL:
-            operator = ComparisonOperation.LESS_THAN_OR_EQUAL;
-            break;
-
-          default:
-            throw new IllegalStateException();
-        }
-
-        return new ComparisonExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
-      },
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.GREATER_THAN, TokenType.GREATER_THAN_OR_EQUAL, TokenType.LESS_THAN, TokenType.LESS_THAN_OR_EQUAL }, null
+              return new ComparisonExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
+            },
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.GREATER_THAN, TokenType.GREATER_THAN_OR_EQUAL, TokenType.LESS_THAN, TokenType.LESS_THAN_OR_EQUAL}, null
     );
   }
 
@@ -439,114 +426,100 @@ public class Parser {
     AExpression value = invokeLowestPrecedenceParser(tokenizer);
 
     return new AssignmentExpression(
-      new IdentifierExpression(identifier.getValue(), identifier, identifier, tokenizer.getRawText()),
-      value, identifier, value.getTail(), tokenizer.getRawText()
+            new IdentifierExpression(identifier.getValue(), identifier, identifier, tokenizer.getRawText()),
+            value, identifier, value.getTail(), tokenizer.getRawText()
     );
   }
 
   private AExpression parseNullCoalesceExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new NullCoalesceExpression(lhs, rhs, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.NULL_COALESCE }, null
+            (lhs, rhs, h, t, op) -> new NullCoalesceExpression(lhs, rhs, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.NULL_COALESCE}, null
     );
   }
 
   private AExpression parseConcatenationExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new ConcatenationExpression(lhs, rhs, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.CONCATENATE }, null
+            (lhs, rhs, h, t, op) -> new ConcatenationExpression(lhs, rhs, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.CONCATENATE}, null
     );
   }
 
   private AExpression parseDisjunctionExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new DisjunctionExpression(lhs, rhs, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.BOOL_OR }, null
+            (lhs, rhs, h, t, op) -> new DisjunctionExpression(lhs, rhs, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.BOOL_OR}, null
     );
   }
 
   private AExpression parseConjunctionExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new ConjunctionExpression(lhs, rhs, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.BOOL_AND }, null
+            (lhs, rhs, h, t, op) -> new ConjunctionExpression(lhs, rhs, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.BOOL_AND}, null
     );
   }
 
   private AExpression parseEqualityExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> {
+            (lhs, rhs, h, t, op) -> {
 
-        EqualityOperation operator;
-        switch (op.getType()) {
-          case VALUE_EQUALS:
-            operator = EqualityOperation.EQUAL;
-            break;
+              EqualityOperation operator = switch (op.getType()) {
+                case VALUE_EQUALS -> EqualityOperation.EQUAL;
+                case VALUE_NOT_EQUALS -> EqualityOperation.NOT_EQUAL;
+                case VALUE_EQUALS_EXACT -> EqualityOperation.EQUAL_EXACT;
+                case VALUE_NOT_EQUALS_EXACT -> EqualityOperation.NOT_EQUAL_EXACT;
+                default -> throw new IllegalStateException();
+              };
 
-          case VALUE_NOT_EQUALS:
-            operator = EqualityOperation.NOT_EQUAL;
-            break;
-
-          case VALUE_EQUALS_EXACT:
-            operator = EqualityOperation.EQUAL_EXACT;
-            break;
-
-          case VALUE_NOT_EQUALS_EXACT:
-            operator = EqualityOperation.NOT_EQUAL_EXACT;
-            break;
-
-          default:
-            throw new IllegalStateException();
-        }
-
-        return new EqualityExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
-      },
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.VALUE_EQUALS, TokenType.VALUE_NOT_EQUALS, TokenType.VALUE_EQUALS_EXACT, TokenType.VALUE_NOT_EQUALS_EXACT }, null
+              return new EqualityExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
+            },
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.VALUE_EQUALS, TokenType.VALUE_NOT_EQUALS, TokenType.VALUE_EQUALS_EXACT, TokenType.VALUE_NOT_EQUALS_EXACT}, null
     );
   }
 
   private AExpression parseAdditiveExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> {
-        MathOperation operator = MathOperation.ADDITION;
+            (lhs, rhs, h, t, op) -> {
+              MathOperation operator = MathOperation.ADDITION;
 
-        if (op.getType() == TokenType.MINUS)
-          operator = MathOperation.SUBTRACTION;
+              if (op.getType() == TokenType.MINUS)
+                operator = MathOperation.SUBTRACTION;
 
-        return new MathExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
-      },
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.PLUS, TokenType.MINUS }, null
+              return new MathExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
+            },
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.PLUS, TokenType.MINUS}, null
     );
   }
 
   private AExpression parseMultiplicativeExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> {
-        MathOperation operator = MathOperation.MULTIPLICATION;
+            (lhs, rhs, h, t, op) -> {
+              MathOperation operator = MathOperation.MULTIPLICATION;
 
-        if (op.getType() == TokenType.DIVISION)
-          operator = MathOperation.DIVISION;
+              if (op.getType() == TokenType.DIVISION)
+                operator = MathOperation.DIVISION;
 
-        else if (op.getType() == TokenType.MODULO)
-          operator = MathOperation.MODULO;
+              else if (op.getType() == TokenType.MODULO)
+                operator = MathOperation.MODULO;
 
-        return new MathExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
-      },
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.MULTIPLICATION, TokenType.DIVISION, TokenType.MODULO }, null
+              return new MathExpression(lhs, rhs, operator, h, t, tokenizer.getRawText());
+            },
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.MULTIPLICATION, TokenType.DIVISION, TokenType.MODULO}, null
     );
   }
 
   private AExpression parseExponentiationExpression(ITokenizer tokenizer, int precedenceSelf) throws AEvaluatorError {
     return parseBinaryExpression(
-      (lhs, rhs, h, t, op) -> new MathExpression(lhs, rhs, MathOperation.POWER, h, t, tokenizer.getRawText()),
-      tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
-      new TokenType[] { TokenType.EXPONENT }, null
+            (lhs, rhs, h, t, op) -> new MathExpression(lhs, rhs, MathOperation.POWER, h, t, tokenizer.getRawText()),
+            tokenizer, PrecedenceMode.HIGHER, precedenceSelf,
+            new TokenType[]{TokenType.EXPONENT}, null
     );
   }
 
@@ -560,39 +533,37 @@ public class Parser {
     if (tk == null)
       throw new UnexpectedTokenError(tokenizer, null, TokenType.valueTypes);
 
-    switch (tk.getType()) {
-      case LONG:
+    return switch (tk.getType()) {
+      case LONG -> {
         logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found an integer");
-        return new LongExpression(parseIntegerWithPossibleExponent(tk), tk, tk, tokenizer.getRawText());
-
-      case DOUBLE:
-        logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found a double");
-        return new DoubleExpression(Double.parseDouble(tk.getValue()), tk, tk, tokenizer.getRawText());
-
-      case STRING:
-        logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found a string");
-        return new StringExpression(tk.getValue(), tk, tk, tokenizer.getRawText());
-
-      case IDENTIFIER: {
-        logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found an identifier");
-        return new IdentifierExpression(tk.getValue(), tk, tk, tokenizer.getRawText());
+        yield new LongExpression(parseIntegerWithPossibleExponent(tk), tk, tk, tokenizer.getRawText());
       }
-
-      case TRUE:
+      case DOUBLE -> {
+        logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found a double");
+        yield new DoubleExpression(Double.parseDouble(tk.getValue()), tk, tk, tokenizer.getRawText());
+      }
+      case STRING -> {
+        logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found a string");
+        yield new StringExpression(tk.getValue(), tk, tk, tokenizer.getRawText());
+      }
+      case IDENTIFIER -> {
+        logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found an identifier");
+        yield new IdentifierExpression(tk.getValue(), tk, tk, tokenizer.getRawText());
+      }
+      case TRUE -> {
         logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found the true literal");
-        return new LiteralExpression(LiteralType.TRUE, tk, tk, tokenizer.getRawText());
-
-      case FALSE:
+        yield new LiteralExpression(LiteralType.TRUE, tk, tk, tokenizer.getRawText());
+      }
+      case FALSE -> {
         logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found the false literal");
-      return new LiteralExpression(LiteralType.FALSE, tk, tk, tokenizer.getRawText());
-
-      case NULL:
+        yield new LiteralExpression(LiteralType.FALSE, tk, tk, tokenizer.getRawText());
+      }
+      case NULL -> {
         logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Found the null literal");
-      return new LiteralExpression(LiteralType.NULL, tk, tk, tokenizer.getRawText());
-
-      default:
-        throw new UnexpectedTokenError(tokenizer, tk, TokenType.valueTypes);
-    }
+        yield new LiteralExpression(LiteralType.NULL, tk, tk, tokenizer.getRawText());
+      }
+      default -> throw new UnexpectedTokenError(tokenizer, tk, TokenType.valueTypes);
+    };
   }
 
   //=========================================================================//
@@ -601,6 +572,7 @@ public class Parser {
 
   /**
    * Invokes the lowest expression parser within the sequence dictated by the precedence ladder
+   *
    * @param tokenizer Current parsing context's tokenizer reference
    * @return Result of invoking the lowest expression parser
    */
@@ -610,7 +582,8 @@ public class Parser {
 
   /**
    * Invokes the next expression parser within the sequence dictated by the precedence ladder
-   * @param tokenizer Current parsing context's tokenizer reference
+   *
+   * @param tokenizer      Current parsing context's tokenizer reference
    * @param precedenceSelf Precedence of the current expression parser wanting to invoke the next
    * @return Result of invoking the next expression parser
    */
@@ -621,8 +594,9 @@ public class Parser {
   /**
    * Searches the index within the token type array of an
    * element which has a type matching the input token
+   *
    * @param types Token types
-   * @param tk Token to match the type of
+   * @param tk    Token to match the type of
    * @return Index if available, -1 otherwise
    */
   private int matchingTypeIndex(TokenType[] types, Token tk) {
@@ -636,18 +610,19 @@ public class Parser {
   /**
    * Parses an expression with the unary expression pattern by first matching an operator, then parsing an
    * expression (with reset precedence levels) and checking for an optional following terminator
-   * @param wrapper Expression wrapper which wraps the input expression and the operator into a matching expression type
-   * @param tokenizer Current parsing context's tokenizer reference
-   * @param precedenceSelf Precedence of the current expression parser wanting to invoke the next
+   *
+   * @param wrapper         Expression wrapper which wraps the input expression and the operator into a matching expression type
+   * @param tokenizer       Current parsing context's tokenizer reference
+   * @param precedenceSelf  Precedence of the current expression parser wanting to invoke the next
    * @param resetPrecedence Whether or not to reset the precedence for the parsed input expression
-   * @param operators Operators which represent this type of expression (match one)
-   * @param terminators Optional terminator for each operator
+   * @param operators       Operators which represent this type of expression (match one)
+   * @param terminators     Optional terminator for each operator
    * @return Parsed expression after invoking the wrapper on it or the result of the next precedence parser if the operators didn't match
    */
   private AExpression parseUnaryExpression(
-    FUnaryExpressionWrapper wrapper, ITokenizer tokenizer,
-    int precedenceSelf, boolean resetPrecedence,
-    TokenType[] operators, @Nullable TokenType[] terminators
+          FUnaryExpressionWrapper wrapper, ITokenizer tokenizer,
+          int precedenceSelf, boolean resetPrecedence,
+          TokenType[] operators, @Nullable TokenType[] terminators
   ) {
     String requiredOperatorsString = Arrays.stream(operators).map(Enum::name).collect(Collectors.joining("|"));
     logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Trying to parse a unary expression for the operator " + requiredOperatorsString);
@@ -689,18 +664,19 @@ public class Parser {
    * right hand side precedence parser. This action of parsing an operator and a right hand side will happen
    * as often as there are matching operators available. The results will be chained together to the right. After
    * each right hand side, the optional terminator will be expected, if provided.
-   * @param wrapper Expression wrapper which wraps the input expression and the operator into a matching expression type
-   * @param tokenizer Current parsing context's tokenizer reference
-   * @param rhsPrecedence Precedence mode to use when parsing right hand side expressions
+   *
+   * @param wrapper        Expression wrapper which wraps the input expression and the operator into a matching expression type
+   * @param tokenizer      Current parsing context's tokenizer reference
+   * @param rhsPrecedence  Precedence mode to use when parsing right hand side expressions
    * @param precedenceSelf Precedence of the current expression parser wanting to invoke the next
-   * @param operators Operators which represent this type of expression (match one)
-   * @param terminators Optional terminator for each operator
+   * @param operators      Operators which represent this type of expression (match one)
+   * @param terminators    Optional terminator for each operator
    * @return Parsed expression after invoking the wrapper on it or the result of the next precedence parser if the operators didn't match
    */
   private AExpression parseBinaryExpression(
-    FBinaryExpressionWrapper wrapper, ITokenizer tokenizer,
-    PrecedenceMode rhsPrecedence, int precedenceSelf,
-    TokenType[] operators, @Nullable TokenType[] terminators
+          FBinaryExpressionWrapper wrapper, ITokenizer tokenizer,
+          PrecedenceMode rhsPrecedence, int precedenceSelf,
+          TokenType[] operators, @Nullable TokenType[] terminators
   ) throws AEvaluatorError {
     logger.log(Level.FINEST, () -> DebugLogSource.PARSER + "Trying to parse a binary expression for the operator " + Arrays.stream(operators).map(Enum::name).collect(Collectors.joining("|")));
 
@@ -710,8 +686,8 @@ public class Parser {
     int opInd;
 
     while (
-      (tk = tokenizer.peekToken()) != null &&
-      (opInd = matchingTypeIndex(operators, tk)) >= 0
+            (tk = tokenizer.peekToken()) != null &&
+                    (opInd = matchingTypeIndex(operators, tk)) >= 0
     ) {
       // Consume the operator
       tokenizer.consumeToken();
@@ -743,6 +719,7 @@ public class Parser {
 
   /**
    * Parses an integer token which supports exponent notation, which java does not (only on doubles).
+   *
    * @param tk Token of integer type
    * @return Value represented by the token
    */
